--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-qr-reader": "^3.0.0-beta.1",
     "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
