--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-qr-reader": "^3.0.0-beta.1",
+    "qrcode.react": "^3.1.0",
+    "html-to-image": "^1.11.11",
     "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
