--- a/package.json
+++ b/package.json
@@ -8,28 +8,39 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage-ui": "vitest run --coverage --reporter=html",
+    "test:coverage": "vitest run --coverage",
+    "test:ci": "vitest run --reporter=verbose",
+    "check": "lint-staged"
   },
   "dependencies": {
+    "html-to-image": "^1.11.11",
+    "qrcode.react": "^3.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-qr-reader": "^3.0.0-beta.1",
-    "qrcode.react": "^3.1.0",
-    "html-to-image": "^1.11.11",
     "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "c8": "^8.0.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "husky": "^9.0.11",
     "jsdom": "^27.4.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "vite": "^7.2.4",
     "vitest": "^4.0.17"
   }
