--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "qrcode.react": "^3.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-qr-reader": "^3.0.0-beta.1",
     "vite-plugin-pwa": "^1.2.0"
   },
