Drag and Drop schedule manager, and added skeleton

--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "html-to-image": "^1.11.11",
     "qrcode.react": "^3.1.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^19.2.0",
     "react-qr-reader": "^3.0.0-beta.1",
     "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
@@ -34,6 +35,7 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.23",
     "c8": "^8.0.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -42,7 +44,9 @@
     "husky": "^9.0.11",
     "jsdom": "^27.4.0",
     "lint-staged": "^15.2.2",
+    "postcss": "^8.5.6",
     "prettier": "^3.2.5",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.2.4",
     "vitest": "^4.0.17"
   }
