--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Google Sheets API Configuration
 VITE_GOOGLE_API_KEY=AIzaSyBe51UjU-ArwPHK81fMtl_NeI9QizCIJS8
 # Replace with your actual Google Sheets ID
-VITE_GOOGLE_SHEET_ID=1NsJy0PGuc7pbNCKMYKUrbVGbI9ysHgmlKAsY0F5K5uk
+# VITE_GOOGLE_SHEET_ID=1NsJy0PGuc7pbNCKMYKUrbVGbI9ysHgmlKAsY0F5K5uk
 # OAuth Client ID for write operations
 VITE_GOOGLE_CLIENT_ID=585714753313-bvjg0vklanrhilm9gdfoqbp2j4rvgmc0.apps.googleusercontent.com
